--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'World War, 1914-1918'
+- GITenberg
 title: Chignole (la guerre aérienne)
 url: http://www.gutenberg.org/ebooks/35150
